@startuml FaceModelServiceComponent
' FaceModelService_component.puml (DD-05: IPC-Based Performance Optimization)
' Tactic: Introduce Concurrency (Pipeline Optimization), Hot Swap (Runtime Binding)

package "Interface Layer" {
  interface IFaceModelServiceApi
  component FaceModelIPCHandler
  IFaceModelServiceApi -- FaceModelIPCHandler
}

package "Business Layer" {
  interface IVectorComparisonService
  interface IFeatureExtractionService
  
  component VectorComparisonEngine
  component ModelLifecycleManager
  component FeatureExtractor
  
  IVectorComparisonService -- VectorComparisonEngine
  IFeatureExtractionService -- FeatureExtractor
  
  ' Tactic: Introduce Concurrency (DD-05)
  VectorComparisonEngine ..( IFeatureExtractionService : <<parallel>>
  
  note right of VectorComparisonEngine
    **DD-05 Pipeline Optimization**
    CompletableFuture parallelization:
    
    requestedStage = extractFeatures(requestedImage)  // ~200ms
    storedStage = extractFeatures(storedVector)       // ~200ms
    
    combinedResult = requestedStage.thenCombine(
      storedStage, 
      (req, stored) -> this.cosineSimilarity(req, stored)  // internal
    )
    
    Total: max(200, 200) + similarity = ~205ms
    vs Sequential: 200 + 200 + 5 = 405ms
    **Improvement: 49% latency reduction**
    
    **Internal Methods:**
    - cosineSimilarity(v1, v2): Cosine similarity calc
    - parallelExtract(): Parallel feature extraction
  end note
  
  ' Tactic: Runtime Binding (Hot Swap)
  ModelLifecycleManager ..( VectorComparisonEngine : <<atomic>>
  
  note left of ModelLifecycleManager
    **Tactic: Runtime Binding (QAS-06)**
    - activeModel: AtomicReference<Model>
    - modelHistory: List<ModelVersion>
    - Rollback support (< 1ms)
    - No service downtime during model update
  end note
}

package "System Interface Layer" {
  interface IModelVersionRepository
  interface IMLInferenceEngine
  interface IMessagePublisherService
  
  component ModelVersionJpaRepository
  component MLInferenceEngineAdapter
  component RabbitMQAdapter
  
  database ModelMetadataDB
  
  IModelVersionRepository -- ModelVersionJpaRepository
  IMLInferenceEngine -- MLInferenceEngineAdapter
  IMessagePublisherService -- RabbitMQAdapter
  
  ModelVersionJpaRepository ..( ModelMetadataDB : <<JDBC>>
}

' Package external connections (Interface Layer → Business Layer)
FaceModelIPCHandler ..( IVectorComparisonService : <<IPC/gRPC>>

' Business Layer → System Interface Layer
FeatureExtractor ..( IMLInferenceEngine : <<Local>>
ModelLifecycleManager ..( IModelVersionRepository : <<JDBC>>
ModelLifecycleManager ..( IMLInferenceEngine : <<deploy/rollback>>
ModelLifecycleManager ..( IMessagePublisherService : <<RabbitMQ>>

note bottom of MLInferenceEngineAdapter
  **Internal ML Inference Engine Adapter**
  - deployModel(version): Load new model
  - rollbackModel(version): Revert to previous
  - extractFeatures(image): Feature extraction
  - getModelMetrics(): Performance data
end note

legend right
  **FaceModel Service: Performance-Critical**
  - Co-located with Access Service (DD-05)
  - IPC/gRPC for minimum latency
  - Pipeline parallelization: 49% faster
  - Hot swap: Zero-downtime model updates
end legend

@enduml
